# kashiwade-music-player

./: .gitignore  APIs.md  README.md  package.json  react-component-tree.drawio  tsconfig.json
src/: App.css  App.tsx  Layout.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: config.json
src-tauri/src/: api.rs  get_dir_data.rs  main.rs  util.rs
src/@type/: api.d.ts
src/LeftZone/: LeftZone.tsx
src/LeftZone/components/: Folder.tsx
src/ProjectZone/: ProjectZone.tsx
src/ProjectZone/components/: Files.tsx
src/TopToolBarAria/: TopToolBarAria.tsx
src/TopToolBarAria/components/: ZoneController.tsx
src/components/: BasicTabs.tsx  BasicTabsNoHidden.tsx  FileList.tsx  FolderList.tsx  TopMenuBar.tsx
src/css/: grid.module.css
src/module/: getAPI.ts  initialObj.ts  isJsonString.ts
src/redux/: store.ts
src/redux/slice/: ConfigSlice.ts  SelectedFolderStatsSlice.ts  ViewStatsSlice.ts
src/resources/: MySvgIcon.tsx  view_icon.afdesign
test/: test.js
